--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
             "port": 3306,
             "driver": "MySQL",
             "name": "Production",
-            "database": "aspiresys",
+            "database": "incvo",
             "username": "root"
         }
     ]
